--- a/.github/workflows/sync_github.yml
+++ b/.github/workflows/sync_github.yml
@@ -5,7 +5,6 @@ on:
     - cron: '0 * * * *'
   workflow_dispatch:
 
-
 jobs:
   run_script:
     runs-on: ubuntu-latest
@@ -19,6 +18,14 @@ jobs:
       with:
         ruby-version: 3.2
         bundler-cache: true
+
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
 
     - name: Install dependencies
       run: |
@@ -49,4 +56,3 @@ jobs:
         if [ -n "${{ secrets.BUILD_HOOK }}" ]; then
           curl -X POST -d {} ${{ secrets.BUILD_HOOK }}
         fi
-
